--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,11 +3,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif; /* Fuente moderna y elegante */
+    font-family: 'Roboto', sans-serif;
+    /* Fuente moderna y elegante */
 }
 
-html, body {
-    background: #011627; /* Fondo oscuro para darle ese toque geek */
+html,
+body {
+    background: #011627;
+    /* Fondo oscuro para darle ese toque geek */
     color: #fff;
     display: flex;
     justify-content: center;
@@ -37,15 +40,34 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 10;
-    background: rgba(1, 23, 39, 0.8); /* Fondo semi-transparente */
+    background: rgba(1, 23, 39, 0.8);
+    /* Fondo semi-transparente */
     border: 2px solid rgba(24, 40, 54, 0.5);
 }
+
+.hamburger {
+    display: none;
+    justify-self: center;
+    color: #50fa7b;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    right: 4%;
+}
+
+.contact-me-responsive {
+    display: none;
+}
+
 
 header .btns_navbar_container,
 footer .btns_navbar_container {
     padding: 1rem 3rem;
     font-size: 1.4rem;
-    color: #50fa7b; /* Verde neon tipo terminal */
+    color: #50fa7b;
+    /* Verde neon tipo terminal */
     letter-spacing: 2px;
     font-weight: 500;
     transition: color 0.3s ease;
@@ -57,14 +79,15 @@ footer .btns_navbar_container {
 }
 
 
-.findme-container{
+.findme-container {
     display: flex;
 }
 
 .findme-icons {
     padding: 1rem 3rem;
     font-size: 1.4rem;
-    color: #50fa7b; /* Verde neon tipo terminal */
+    color: #50fa7b;
+    /* Verde neon tipo terminal */
     letter-spacing: 2px;
     transition: color 0.3s ease;
     cursor: pointer;
@@ -76,7 +99,8 @@ footer .btns_navbar_container {
 header .btns_navbar_container:hover,
 footer .btns_navbar_container:hover,
 .findme-icons:hover {
-    color: #ff79c6; /* Cambio de color para el hover */
+    color: #ff79c6;
+    /* Cambio de color para el hover */
 }
 
 /* Enlaces de la navegación */
@@ -98,7 +122,8 @@ nav a::before {
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: #50fa7b; /* Subrayado verde tipo terminal */
+    background-color: #50fa7b;
+    /* Subrayado verde tipo terminal */
     transform: scaleX(0);
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
@@ -141,7 +166,8 @@ nav a:hover {
 }
 
 #hero p span {
-    color: #50fa7b; /* Color verde para destacar algo */
+    color: #50fa7b;
+    /* Color verde para destacar algo */
 }
 
 #hero .btn {
@@ -195,13 +221,17 @@ h2 {
     border: 2px solid rgba(24, 40, 54, 0.5);
 }
 
-.proyecto-card > img {
+.proyecto-card>img {
     width: 100%;
     height: 40%;
-    object-fit: cover; /* Ajusta la imagen sin deformarla */
-    object-position: center; /* Centra la imagen si es necesario */
-    border-top-left-radius: inherit; /* Hereda el radio del contenedor */
-    border-top-right-radius: inherit; /* Hereda el radio del contenedor */
+    object-fit: cover;
+    /* Ajusta la imagen sin deformarla */
+    object-position: center;
+    /* Centra la imagen si es necesario */
+    border-top-left-radius: inherit;
+    /* Hereda el radio del contenedor */
+    border-top-right-radius: inherit;
+    /* Hereda el radio del contenedor */
     border-bottom: inherit;
 }
 
@@ -214,7 +244,7 @@ h2 {
     height: 60%;
 }
 
-.project-text--card-container > a {
+.project-text--card-container>a {
     width: 100%;
     border: 2px solid rgba(24, 40, 54, 0.5);
     align-self: center;
@@ -229,7 +259,7 @@ h2 {
 }
 
 .proyecto-card h3 {
-    
+
     font-size: 1.5rem;
     color: #50fa7b;
     margin-bottom: 1rem;
@@ -300,10 +330,139 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background: rgba(1, 23, 39, 0.8); /* Fondo semi-transparente */
+    background: rgba(1, 23, 39, 0.8);
+    /* Fondo semi-transparente */
     border: 2px solid rgba(24, 40, 54, 0.5);
     font-size: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+@media (max-width: 768px) {
+    #hero h1 {
+        font-size: 2.5rem;
+    }
+
+    #hero p {
+        font-size: 1.2rem;
+        padding: 0 1rem;
+    }
+
+    #about-me {
+        flex-direction: column;
+        height: auto;
+    }
+
+    #about-me pre {
+        width: 100%;
+        height: auto;
+    }
+
+    .code-container--header h3 {
+        font-size: 2.5rem !important;
+    }
+
+    #code-block,
+    #line-numbers {
+        font-size: 1.2rem !important;
+    }
+
+    .code-container--header,
+    #code-container {
+        width: 90% !important;
+    }
+
+
+    .project-card--container {
+        display: flex;
+        gap: 1rem;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        /* para suavidad en iOS */
+    }
+
+    #proyectos {
+        padding: 0;
+        margin-top: 10rem;
+    }
+
+    .proyecto-card {
+        width: 100%;
+        flex: 0 0 auto;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        scroll-snap-align: start;
+        transition: transform 0.3s ease;
+    }
+
+    .proyecto-card:hover {
+        transform: scale(1.02);
+    }
+
+    /* Opcional: ocultar scroll en navegadores modernos */
+    .project-card--container::-webkit-scrollbar {
+        display: none;
+    }
+
+    .project-card--container {
+        -ms-overflow-style: none;
+        /* IE/Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
+
+    #contacto p,
+    a {
+        font-size: 1.3rem;
+        text-align: center;
+        line-height: normal;
+        padding: 1rem;
+        width: 85%;
+    }
+
+
+
+    header {
+        font-size: 1rem;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .contact-me-responsive {
+        display: block;
+    }
+
+    nav {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        background: rgba(1, 23, 39, 0.8);
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+        padding: 1rem 0;
+        display: none;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+        border-top: 2px solid rgba(24, 40, 54, 0.5);
+    }
+
+    nav.active {
+        display: flex;
+    }
+
+    .btns_navbar_container:last-child {
+        display: none;
+    }
+
+
+    footer {
+        display: none;
+    }
 }
